--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,9 +1,8 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/naviyan2/public_html
-    - /bin/cp -r * $DEPLOYPATH/
-    - cd $DEPLOYPATH
     - npm install
     - npm run build
-    - npm start 
+    - export DEPLOYPATH=/home/naviyan2/public_html
+    - /bin/rm -rf $DEPLOYPATH/*
+    - /bin/cp -r build/* $DEPLOYPATH/
