--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,12 +3,13 @@ deployment:
   tasks:
     - npm install
     - npm run build
-    - export DEPLOYPATH=/home/naviyan2/public_html
-    - /bin/rm -rf $DEPLOYPATH/*
+    - export DEPLOYPATH=/home/naviyan2/public_html/instatrack
+    - mkdir -p $DEPLOYPATH
     - /bin/cp -r .next $DEPLOYPATH/
     - /bin/cp -r public $DEPLOYPATH/
     - /bin/cp -r package.json $DEPLOYPATH/
     - /bin/cp -r package-lock.json $DEPLOYPATH/
+    - /bin/cp -r server.js $DEPLOYPATH/
     - cd $DEPLOYPATH
     - npm install --production
     - npm start
