--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NODE_OPTIONS='--max-old-space-size=2048' next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -51,7 +51,7 @@
     "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.0.0",
     "lucide-react": "^0.294.0",
-    "next": "13.5.6",
+    "next": "12.3.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
@@ -67,11 +67,11 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^16",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.0.0"
+    "typescript": "^4.9.5"
   }
 }
